--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -39,6 +39,8 @@
 \newcommand{\binSigma}{\ensuremath{\Sigma_{01}}}
 \newcommand{\tilthdr}[1]{\rlap{\rotatebox{60}{#1}}}
 
+\newtheorem*{lemma}{Lemma}
+
 \setlist[description]{leftmargin=\parindent,labelindent=\parindent}
 
 \makenoidxglossaries
@@ -98,6 +100,14 @@
     name={\gls{arm} \textsc{M-Class}},
     description={},
 }
+\newglossaryentry{nuxmv}{
+    name={\textsc{nuXmv}},
+    description={},
+}
+\newglossaryentry{smv}{
+    name={\textsc{Smv}},
+    description={},
+}
 
 % TODO: descriptions
 \newacronym{risc}{RISC}{reduced instruction set computer}
@@ -125,7 +135,10 @@
 \newacronym{2bmc}{2BMC}{Bounded Model Checking-Based Model Checking}
 \newacronym{cegar}{CEGAR}{Counterexample Guided Abstaction Refinement}
 \newacronym{ltl}{LTL}{linear temporal logic}
-\newacronym{api}{API}{Application Programming Interface}
+\newacronym{ctl}{CTL}{computation tree logic}
+\newacronym{api}{API}{application programming interface}
+\newacronym{bdd}{BDD}{boolean decision diagram}
+\newacronym{psl}{PSL}{property specification language}
 
 \newacronym{jal}{\rv{Jal}}{jump and link}
 \newacronym{jalr}{\rv{Jalr}}{jump and link register}
