thesis: Rework Introduction

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -502,3 +502,18 @@
     abstract = {A new form of SAT-based symbolic model checking is described. Instead of unrolling the transition relation, it incrementally generates clauses that are inductive relative to (and augment) stepwise approximate reachability information. In this way, the algorithm gradually refines the property, eventually producing either an inductive strengthening of the property or a counterexample trace. Our experimental studies show that induction is a powerful tool for generalizing the unreachability of given error states: it can refine away many states at once, and it is effective at focusing the proof search on aspects of the transition system relevant to the property. Furthermore, the incremental structure of the algorithm lends itself to a parallel implementation.},
     isbn = {978-3-642-18275-4}
 }
+
+@incollection{Dijkstra72,
+ author = {Dijkstra, Edsger W.},
+ chapter = {Chapter I: Notes on Structured Programming},
+ title = {Structured Programming},
+ editor = {Dahl, O. J. and Dijkstra, E. W. and Hoare, C. A. R.},
+ year = {1972},
+ isbn = {0-12-200550-3},
+ pages = {1--82},
+ numpages = {82},
+ url = {http://dl.acm.org/citation.cfm?id=1243380.1243381},
+ acmid = {1243381},
+ publisher = {Academic Press Ltd.},
+ address = {London, UK, UK},
+}
