--- a/thesis/sections/results.tex
+++ b/thesis/sections/results.tex
@@ -1,6 +1,7 @@
 %!TEX root = ../thesis.tex
 
 \section{Results}
+\label{sec:results}
 
 This section will cover the results of the verification process as it was described in section \ref{sec:checking}.
 The main finding was that there are 8 assumptions which in total grant that the properties as described in section \ref{sec:props} can not be violated, in other words: the MINRV8 architecture models the information flow properties introduced in this thesis, namely \smv{MEMORY_OP_INTEGRITY}, \smv{CSR_INTEGRITY} and \smv{NO_LEAK}, if and only if we assume the 8 assumptions that will be introduced in subsequent sections.
