--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -238,6 +238,7 @@
 \input{sections/model.tex}
 \input{sections/checking.tex}
 \input{sections/results.tex}
+\input{sections/discussion.tex}
 \input{sections/related.tex}
 \input{sections/conclusion.tex}
 
